[gd_scene load_steps=13 format=3 uid="uid://7kk84aj4unwq"]

[ext_resource type="Script" uid="uid://cpbskyukel7vu" path="res://Scripts/start_menu.gd" id="1_8by1o"]
[ext_resource type="PackedScene" uid="uid://drpbwsyj2i16e" path="res://Scenes/Cloud.tscn" id="2_brptw"]
[ext_resource type="Script" uid="uid://custpuqxtmgjj" path="res://Scripts/balloon_menu.gd" id="3_1rkno"]
[ext_resource type="PackedScene" uid="uid://cg7c41fny12xj" path="res://Scenes/Balloon.tscn" id="4_5uqoc"]
[ext_resource type="FontFile" uid="uid://b723w63oyxxhw" path="res://CoffeCake.ttf" id="5_ru7em"]
[ext_resource type="AudioStream" uid="uid://c78tqlepyc3ha" path="res://Sounds/Wind.wav" id="6_85hbi"]
[ext_resource type="Script" uid="uid://yxeolykau3ov" path="res://Scripts/master_volume.gd" id="6_ru1ub"]
[ext_resource type="AudioStream" uid="uid://bgqgy5h8pmoos" path="res://Resources/Popping.tres" id="7_d70po"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qxmub"]
sky_top_color = Color(0.173839, 0.47887, 0.654901, 1)
sky_curve = 0.227357
ground_bottom_color = Color(1, 1, 1, 1)
ground_horizon_color = Color(0.649855, 0.659311, 0.674239, 1)
ground_curve = 1.1536

[sub_resource type="Sky" id="Sky_wig8d"]
sky_material = SubResource("ProceduralSkyMaterial_qxmub")

[sub_resource type="Environment" id="Environment_b42tr"]
background_mode = 2
background_color = Color(0.518629, 0.863764, 1, 0.615686)
sky = SubResource("Sky_wig8d")
tonemap_mode = 2
glow_enabled = true
fog_light_color = Color(0.744356, 0.769036, 0.807818, 1)
fog_light_energy = 0.0
fog_height = -1024.0
volumetric_fog_density = 0.1

[sub_resource type="LabelSettings" id="LabelSettings_pwv50"]
font = ExtResource("5_ru7em")
font_size = 50
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_8by1o")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b42tr")

[node name="Background" parent="WorldEnvironment" instance=ExtResource("2_brptw")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(-0.107166, -0.65896, 0.744505, 0, 0.748817, 0.662777, -0.994241, 0.0710275, -0.0802481, 0, 0, 0)

[node name="Cloud2" parent="WorldEnvironment" instance=ExtResource("2_brptw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02399, 0.0308609, -9.81827)

[node name="Cloud" parent="WorldEnvironment" instance=ExtResource("2_brptw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.21275, 0.112141, -7.50982)

[node name="BalloonMenu" type="Node" parent="WorldEnvironment"]
script = ExtResource("3_1rkno")
balloon = ExtResource("4_5uqoc")

[node name="Timer" type="Timer" parent="WorldEnvironment/BalloonMenu"]
autostart = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 3)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 25.0
offset_right = 142.0
offset_bottom = 164.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("5_ru7em")
theme_override_font_sizes/font_size = 80
text = "Hot Air!"

[node name="MainMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -50.5
offset_right = 43.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.653092, 0.76713, 0.997292, 1)
theme_override_fonts/font = ExtResource("5_ru7em")
theme_override_font_sizes/font_size = 25
text = "Start"

[node name="Controls" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ru7em")
theme_override_font_sizes/font_size = 25
text = "Controls"

[node name="Audio" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ru7em")
theme_override_font_sizes/font_size = 25
text = "Audio Settings"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933326, 4.81308e-06, 9.62615e-07, 1)
theme_override_fonts/font = ExtResource("5_ru7em")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="AudioMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -188.5
offset_right = 180.0
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 19

[node name="Label" type="Label" parent="AudioMenu"]
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_pwv50")
horizontal_alignment = 1

[node name="MasterVolume" type="HSlider" parent="AudioMenu"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_ru1ub")

[node name="Back2" type="Button" parent="AudioMenu"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("5_ru7em")
theme_override_font_sizes/font_size = 46
text = "Back"

[node name="ControlsMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -170.0
offset_right = 154.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ControlsText" type="Label" parent="ControlsMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Q E: Yaw
A D: Roll
W S: Pitch

Shift: Throttle up
Space: Throttle down

Click once to activate mouse movement
Esc to disable mouse movement

Plane's Trail indicates Health:
Green - 3 , Yellow - 2,  Red - 1

Fly through the checkpoints
Avoid the balloons!"

[node name="Back" type="Button" parent="ControlsMenu"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("5_ru7em")
theme_override_font_sizes/font_size = 46
text = "Back"

[node name="Wind" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_85hbi")
volume_db = 7.0
pitch_scale = 1.43
autoplay = true

[node name="Popping" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_d70po")
volume_db = -10.0

[connection signal="timeout" from="WorldEnvironment/BalloonMenu/Timer" to="WorldEnvironment/BalloonMenu" method="_on_timer_timeout"]
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MainMenu/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="AudioMenu/Back2" to="." method="_on_back_2_pressed"]
[connection signal="pressed" from="ControlsMenu/Back" to="." method="_on_back_pressed"]
